<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.login.LoginFragment"
    android:background="@color/lightgray">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/platinum"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                style="@style/textView"
                android:text="@string/un"/>

            <EditText
                android:id="@+id/etxt_UserName_l"
                style="@style/editText" />
            <TextView
                style="@style/textView"
                android:text="@string/pw"/>
            <EditText
                style="@style/editText"
                android:id="@+id/lpass"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/rm"
                android:textSize="14sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_LogIn_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/cobaltblue"
                    android:text="@string/li"
                    android:textColor="@color/white" />
                <TextView
                    style="@style/textView"
                    android:layout_marginStart="5dp"
                    android:text="@string/fp"
                    android:textColor="@color/brightblue"
                    android:textStyle="normal"
                    android:textSize="14sp" />
            </LinearLayout>
            <TextView
                style="@style/textView"
                android:layout_gravity="end"
                android:text="@string/dha"
                android:textStyle="normal"
                android:textSize="14sp" />
            <Button
                android:id="@+id/btn_SignUp_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/cobaltblue"
                android:text="@string/su"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>