<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.signup.SignUpFragment"
    android:orientation="vertical"
    android:background="@color/lightgray">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/platinum"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                style="@style/textView"
                android:text="@string/un"/>
            <EditText
                style="@style/editText"
                android:id="@+id/uname"
                />
            <TextView
                style="@style/textView"
                android:text="@string/em"/>
            <EditText
                style="@style/editText"
                android:id="@+id/uemail"
                />
            <TextView
                style="@style/textView"
                android:text="@string/pw"/>
            <EditText
                style="@style/editText"
                android:id="@+id/upass"
                />
            <TextView
                style="@style/textView"
                android:text="@string/cp"/>
            <EditText
                style="@style/editText"
                android:id="@+id/ucpass"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/brightblue"
                android:text="@string/su"
                android:id="@+id/usignup"
                android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/platinum"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                style="@style/textView"
                android:text="@string/dha"
                android:textStyle="normal"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/btn_Login_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/brightblue"
                android:text="@string/li"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>